@@ -25,6 +25,9 @@ LibroNova is a modern, feature-rich library management system built with Java, J
 - **Decorator Pattern**: Automatic assignment of default properties (role: ASSISTANT, status: ACTIVE, createdAt: now())
 - **User Status Management**: Active/Inactive/Suspended user status tracking
 - **Role-Based Access Control**: Admin-only features for user management
+- **Enhanced Navigation**: Robust window management with independent view stages
+- **Auto-Recovery**: Automatic view reinitialization on failure
+- **Stability Improvements**: Comprehensive error handling and logging
 
 ### 👥 Member Management
 - **Member Registration**: Register new library members with validation
@@ -246,6 +249,25 @@ The application includes default user accounts for testing and initial setup:
 3. **Main Menu**: After successful login, the main menu provides access to all modules based on your role
 4. **Sample Data**: The system comes with sample data for testing
 
+### ⚡ Quick Troubleshooting
+**If the application doesn't start or behaves unexpectedly**:
+```bash
+# 1. Clean build and restart
+mvn clean compile
+mvn javafx:run
+
+# 2. Check Java version (must be 21+)
+java --version
+
+# 3. Verify database connection
+mysql -u libronova_user -p -e "SELECT 1;"
+```
+
+**If login works but menu doesn't appear**:
+- Check console output for error messages
+- Look for HTTP simulation logs indicating successful authentication
+- Ensure JavaFX runtime is properly configured
+
 ### Book Management
 1. **Add New Book**: Click "Book Management" → "Add New Book"
 2. **Required Fields**: Fill in ISBN, Title, Author, Publisher, Year, and Stock
@@ -273,6 +295,14 @@ The application includes default user accounts for testing and initial setup:
 4. **Update User Status**: Change user status (Active/Inactive/Suspended)
 5. **HTTP Logging**: All user operations are logged to console simulating REST API calls
 6. **Session Management**: Secure login/logout with session tracking
+
+### 🚀 **Navigation & Window Management**
+The application uses an enhanced window management system:
+- **Independent Windows**: Each view (Books, Members, Loans) opens in its own window
+- **Non-blocking Navigation**: Main menu remains available while views are open
+- **Seamless Return**: "Back to Main Menu" buttons return you to the main interface
+- **Multi-window Support**: You can have multiple views open simultaneously
+- **Auto-recovery**: If a view fails to load, the system will attempt to reinitialize it
 
 ## 🧪 Testing
 
@@ -385,6 +415,45 @@ ui.language=en
 
 ### Common Issues
 
+#### 🚪 Login Screen Not Appearing
+```bash
+# If the login screen doesn't show, check console for errors
+# Ensure JavaFX modules are properly loaded:
+mvn clean compile
+mvn javafx:run
+
+# Check if application starts but no window appears:
+# This usually indicates a JavaFX initialization issue
+```
+
+#### 💻 Application Closes After Login
+**Solution**: This issue has been fixed in v1.1.1. If you still experience this:
+1. Ensure you're using the latest version
+2. Check console logs for error messages
+3. Verify that services are properly initialized
+
+#### 📁 Views Don't Open or Close Immediately
+**Symptoms**: Clicking on "Book Management", "Member Management", etc. does nothing
+**Solutions**:
+```bash
+# 1. Check console for detailed error messages
+# Look for lines starting with [SEVERE] or [ERROR]
+
+# 2. Verify database connection
+mysql -u libronova_user -p -e "SELECT 1;"
+
+# 3. Restart application with clean compile
+mvn clean compile
+mvn javafx:run
+```
+
+#### 🔑 Authentication Issues
+**Default Credentials Not Working**:
+- Admin: `admin` / `admin123`
+- Assistant: `assistant` / `assistant123`
+- Credentials are case-sensitive
+- Check console for HTTP simulation logs to verify authentication attempts
+
 #### Database Connection Failed
 ```bash
 # Check MySQL service status
@@ -392,19 +461,80 @@ sudo systemctl status mysql
 
 # Test connection
 mysql -u libronova_user -p -e "SELECT 1;"
+
+# Restart MySQL if needed
+sudo systemctl restart mysql
 ```
 
 #### JavaFX Runtime Issues
 ```bash
-# Add JavaFX modules explicitly
-java --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml -jar app.jar
+# If you see "JavaFX runtime components are missing"
+# The project is configured for Java 21 with JavaFX 21
+# Ensure you have the correct versions:
+
+java --version  # Should show Java 21
+mvn -version   # Should show Maven 3.6+
+
+# Run with explicit module path if needed:
+mvn clean javafx:run
 ```
+
+#### 🖥️ Window Management Issues
+**Multiple windows not working properly**:
+1. Close all application windows
+2. Restart the application
+3. Each view should open in its own independent window
+4. Use "Back to Main Menu" to return to the main interface
 
 #### Permission Denied Errors
 ```bash
 # Fix MySQL socket permissions
 sudo chmod 777 /var/run/mysqld/mysqld.sock
+
+# Or restart MySQL service
+sudo systemctl restart mysql
 ```
+
+### 📊 Application Logs and Debugging
+
+#### Console Output
+The application provides detailed logging:
+```bash
+# HTTP simulation logs show all user operations:
+========================================
+HTTP REQUEST SIMULATION
+========================================
+Method: POST
+Endpoint: /api/auth/login
+Status: 201 Created
+========================================
+
+# Authentication logs:
+[AUTH] 2024-10-14 17:22:59 - Authentication attempt for user 'admin': SUCCESS
+
+# Session management:
+[SESSION] 2024-10-14 17:22:59 - User 'admin': LOGIN
+```
+
+#### Error Levels
+- **[INFO]**: Normal operation messages
+- **[WARNING]**: Non-critical issues that don't stop execution
+- **[SEVERE]**: Critical errors that may cause application failure
+- **[ERROR]**: General errors with stack traces
+
+### 📝 Known Issues and Limitations
+
+#### Current Limitations
+- **In-Memory User Storage**: User authentication uses in-memory storage for demonstration. In production, integrate with a proper user database.
+- **Plain Text Passwords**: Passwords are stored in plain text for demo purposes. Production systems should use proper hashing (bcrypt, etc.).
+- **HTTP Simulation**: The HTTP logging system simulates REST API calls for demonstration. Real implementations would use actual HTTP clients.
+
+#### Future Enhancements
+- Database-backed user authentication
+- Password encryption and security improvements
+- Real REST API integration
+- Advanced user management features
+- Audit logging for all user actions
 
 ### Log Files
 Check application logs in:
@@ -445,6 +575,15 @@ For support and questions:
 
 ## 🔄 Version History
 
+- **v1.1.1** (2024-10-14): Bug Fixes & Navigation Improvements
+  - 🐛 **FIXED**: Application no longer closes unexpectedly after login
+  - 🐛 **FIXED**: Main menu now displays correctly after successful authentication
+  - 🔧 **IMPROVED**: Enhanced window management with independent stages for each view
+  - 🔧 **IMPROVED**: Better error handling and logging throughout the application
+  - 🔧 **IMPROVED**: Robust navigation system with proper back-to-menu functionality
+  - ⚡ **PERFORMANCE**: Optimized view initialization and stage management
+  - 🔒 **STABILITY**: Added null checks and auto-recovery for view components
+
 - **v1.1.0** (2024-10-14): Authentication & User Management Update
   - ✨ **NEW**: User authentication system with role-based access control
   - ✨ **NEW**: Admin and Assistant user roles with different permissions
@@ -467,14 +606,20 @@ For support and questions:
 
 ## 📸 Screenshots
 
+### Login Screen
+Secure authentication with role-based access control. Default credentials are provided for testing.
+
 ### Main Menu
-The central hub for accessing all library management functions.
+The central hub for accessing all library management functions. Shows user information and role-specific options.
 
 ### Book Management
-Comprehensive book catalog with search and stock management capabilities.
+Comprehensive book catalog with search and stock management capabilities. Opens in independent window.
+
+### User Management (Admin Only)
+Demonstrates decorator pattern and HTTP logging simulation for user operations.
 
 ### Loan Processing
-Streamlined loan creation and return processing with fine calculation.
+Streamlined loan creation and return processing with fine calculation and overdue management.
 
 ---
 
